--- a/sass/components/_index_section_4.scss
+++ b/sass/components/_index_section_4.scss
@@ -5,8 +5,8 @@
     // height: 708px;
     background-color: $bg-btn;
     margin-top: 94px;
-    margin-bottom: 0;
-    padding-top: 94px;
+    // margin-bottom: 60px;
+    padding-bottom: 94px;
     text-align: center;
    
 }
@@ -30,7 +30,7 @@
     @include for-size(tablet){
         display: flex;
         flex-wrap: wrap;
-        margin: -5px;
+        margin: -15px;
     }
     @include for-size(desktop){
              margin: -15px;
@@ -53,8 +53,8 @@
     @include for-size(tablet){
         height: 536px;
         width: 354px;
-        flex-basis: calc((100% - 4 * 5px)/2);
-        margin: 5px;
+        flex-basis: calc((100% - 4 * 15px)/2);
+        margin: 15px;
     }
     @include for-size(desktop){
         height: 428px;
