--- a/sass/components/_index_section_5.scss
+++ b/sass/components/_index_section_5.scss
@@ -10,7 +10,7 @@
     @include for-size(tablet-only){
         display: flex;
         flex-wrap: wrap;
-        margin: -5px;
+        margin: -10px;
     }
     @include for-size(tablet) {
         display: flex;
@@ -22,7 +22,7 @@
     }
     // margin-top: 0px;
     // margin-bottom: 0px;
-    // padding-top: 94px;
+    // margin-bottom: 94px;
     // padding-bottom: 0px;
     // text-align: center;
 }
@@ -37,6 +37,7 @@
     @include for-size(tablet){
         flex-basis: calc((100% - 6 * 15px)/3);
         margin: 15px;
+
     }
     @include for-size(desktop){
         flex-basis: calc((100% - 12* 15px)/6);
@@ -50,6 +51,7 @@
             margin-bottom: 30px;
         }
     }
+
 }
 .client-icon-link{
     display: flex;
