--- a/css/main.css
+++ b/css/main.css
@@ -746,7 +746,7 @@ section.title {
 @media (min-width: 768px) {
   .footer-main {
     height: 463px;
-    margin-top: 45px;
+    margin-top: px;
   }
 }
 
@@ -1998,6 +1998,7 @@ section.title {
 
 @media (min-width: 768px) {
   .container-grid {
+    margin: -15px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -2021,6 +2022,7 @@ section.title {
   display: flex;
   margin-top: 0;
   margin-bottom: 0;
+  height: 404px;
   border: 1px solid #EEEEEE;
 }
 
@@ -2029,28 +2031,18 @@ section.title {
           box-shadow: 0px 2px 4px 0px #757575;
 }
 
-.flex-element:nth-child(3n) {
-  margin-left: 0px;
-}
-
-.flex-element:nth-last-child(-n+3) {
-  margin-bottom: 0px;
-}
-
 @media screen and (min-width: 480px) {
   .flex-element {
     width: 450px;
-    height: 404px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .flex-element {
     width: 354px;
-    height: 440px;
-    -ms-flex-preferred-size: calc((100% - 4 * 5px)/2);
-        flex-basis: calc((100% - 4 * 5px)/2);
-    margin: 5px;
+    -ms-flex-preferred-size: calc((100% - 4 * 15px)/2);
+        flex-basis: calc((100% - 4 * 15px)/2);
+    margin: 15px;
   }
 }
 
@@ -2058,7 +2050,6 @@ section.title {
   .flex-element {
     margin-bottom: 30px;
     width: 370px;
-    height: 404px;
     -ms-flex-preferred-size: calc((100% - 6* 15px)/3);
         flex-basis: calc((100% - 6* 15px)/3);
     margin: 15px;
