--- a/sass/components/_page_footer.scss
+++ b/sass/components/_page_footer.scss
@@ -15,7 +15,7 @@
     }
     @include for-size(tablet){
         height: 463px;
-        margin-top: 45px;
+        margin-top: px;
         }
         @include for-size(desktop){
             height: 252px;
@@ -83,14 +83,10 @@
    @media screen and (max-width: 480px){
         display: block;
         margin-top: 60px;
-  
 }
-//     @include for-size(tablet){
-//         margin-top: 0px;
-//    }
-   @include for-size(desktop){
 
-        margin-left: 70px;
+   @include for-size(desktop){
+       margin-left: 70px;
    }
 
 
@@ -114,8 +110,6 @@
 
     margin-top: 22px;
  
-
-
     margin-bottom: 0;
     margin-left: auto;
     margin-right: auto;
