--- a/sass/components/_portfolio_section_2.scss
+++ b/sass/components/_portfolio_section_2.scss
@@ -26,17 +26,17 @@
         margin-top: 46px;
     }
     @include for-size(tablet){
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 36px;
+      margin: -15px;
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: 36px;
    
 
     }
     @include for-size(desktop){
-             margin: -15px;
-             margin-top: 56px;
-             margin-bottom: 94px;
-
+      margin: -15px;
+      margin-top: 56px;
+      margin-bottom: 94px;
     }
     justify-content: space-between;
 
@@ -48,34 +48,35 @@
     display: flex;
     margin-top: 0;
     margin-bottom: 0;
-
+    height: 404px;  
     border: 1px solid #EEEEEE;
     &:hover{
         box-shadow: 0px 2px 4px 0px $gray;
     }
-    &:nth-child(3n) {
-        margin-left: 0px;
-    }
-    &:nth-last-child(-n+3) {
-        margin-bottom: 0px;
-    }
+
     @media screen and (min-width: $mobile) {
         width: 450px;
-        height: 404px;    
+        
     }
 
     @media screen and (min-width: $tablet) {
         width: 354px;
-        height: 440px;
-        flex-basis: calc((100% - 4 * 5px)/2);
-        margin: 5px;
+   
+        flex-basis: calc((100% - 4 * 15px)/2);
+        margin: 15px;
         }
     @media screen and (min-width: $desktop) {
         margin-bottom: 30px; 
         width: 370px;
-        height: 404px;
+      
         flex-basis: calc((100% - 6* 15px)/3);
         margin: 15px;
+      //   &:nth-child(3n) {
+      //     margin-left: 0px;
+      // }
+      // &:nth-last-child(-n+3) {
+      //     margin-bottom: 0px;
+      // }
 
         }
     @media screen and (max-width: 737px) {
@@ -125,7 +126,7 @@
           }
           @media screen and(min-width: 768px) {
             width: 354px;
-    
+ 
     
           }
           @media screen and(min-width: 1200px) {
