--- a/sass/components/_page_footer.scss
+++ b/sass/components/_page_footer.scss
@@ -9,18 +9,18 @@
     padding-top: 60px;
     padding-bottom: 0;
 
-    @include for-size(tablet-only){
+    @include for-size(mobile){
     height: 463px;
     margin-top: 45px;
     }
     @include for-size(tablet){
         height: 463px;
         margin-top: px;
-        }
-        @include for-size(desktop){
-            height: 252px;
-            margin-top: 94px;
-            }
+    }
+    @include for-size(desktop){
+        height: 252px;
+        margin-top: 94px;
+    }
     background-color: $bg-box;
 }
 
