--- a/sass/components/_page_header.scss
+++ b/sass/components/_page_header.scss
@@ -147,6 +147,7 @@
             display: inline-flex;
             align-items: baseline;
             margin-left: 30px;
+            font-size: 14px;
             
         }
         
