--- a/css/main.css
+++ b/css/main.css
@@ -623,6 +623,7 @@ section.title {
         -ms-flex-align: baseline;
             align-items: baseline;
     margin-left: 30px;
+    font-size: 14px;
   }
 }
 
