--- a/sass/components/_index_section_4.scss
+++ b/sass/components/_index_section_4.scss
@@ -45,7 +45,11 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
-
+    @media screen and (min-width: 320px) {
+        height: 622px;
+        width: 450px;   
+    }
+    }
     @include for-size(mobile){
         height: 622px;
         width: 450px;
@@ -119,7 +123,7 @@
 .center-network {
     display: flex;
     list-style: none;
-    @media screen and (max-width: 480px){
+    @media screen and (min-width: 320px){
         padding: 0px 122px 0px 122px;
     }
     @include for-size(mobile){
