--- a/css/main.css
+++ b/css/main.css
@@ -1763,9 +1763,9 @@ section.title {
   list-style: none;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 320px) {
   .center-network {
-    padding: 0px 122px 0px 122px;
+    padding: 0px 94px 0px 94px;
   }
 }
 
