--- a/css/main.css
+++ b/css/main.css
@@ -1677,6 +1677,12 @@ section.title {
   border-radius: 0px 0px 4px 4px;
 }
 
+@media screen and (min-width: 320px) {
+  .team-li {
+    padding-bottom: 20px;
+  }
+}
+
 @media (min-width: 480px) {
   .team-li {
     height: 622px;
@@ -1765,7 +1771,8 @@ section.title {
 
 @media screen and (min-width: 320px) {
   .center-network {
-    padding: 0px 122px 0px 122px;
+    padding-left: calc((100%)/4);
+    padding-right: calc((100%)/4);
   }
 }
 
