--- a/sass/components/_index_section_4.scss
+++ b/sass/components/_index_section_4.scss
@@ -44,7 +44,10 @@
  
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-
+    @media screen and (min-width: 320px){
+        padding-bottom: 20px;
+        // height: calc(100%*(622px/450px));
+    }
 
     @include for-size(mobile){
         height: 622px;
@@ -120,7 +123,9 @@
     display: flex;
     list-style: none;
     @media screen and (min-width: 320px){
-        padding: 0px 122px 0px 122px;
+        // padding: 0px 122px 0px 122px;
+        padding-left: calc((100%)/4);
+        padding-right: calc((100%)/4);
     }
     @include for-size(mobile){
         padding: 0px 122px 0px 122px;
