--- a/css/main.css
+++ b/css/main.css
@@ -1264,6 +1264,13 @@ section.title {
     background-repeat: no-repeat; */
 }
 
+@media screen and (min-width: 320px) {
+  .form-input {
+    width: 370px;
+    height: 40px;
+  }
+}
+
 @media (min-width: 480px) {
   .form-input {
     width: 370px;
@@ -1413,6 +1420,13 @@ section.title {
   color: #000000;
   padding-left: 16px;
   padding-top: 12px;
+}
+
+@media screen and (min-width: 320px) {
+  .textarea-form {
+    width: 370px;
+    height: 120px;
+  }
 }
 
 @media (min-width: 480px) {
