--- a/sass/components/_index_modal.scss
+++ b/sass/components/_index_modal.scss
@@ -130,6 +130,10 @@
     padding: 0; */
     margin-left: 41px;
     margin-top: 30px;
+    @media screen and (min-width: 320px){
+        width: 370px;
+        height: 40px;      
+    }
     @include for-size(mobile){
         width: 370px;
         height: 40px;
@@ -276,6 +280,10 @@
 
 
 .textarea-form{
+    @media screen and (min-width: 320px){
+        width: 370px;
+        height: 120px;
+    }
     @include for-size(mobile){
         width: 370px;
         height: 120px;
