--- a/sass/components/_index_modal.scss
+++ b/sass/components/_index_modal.scss
@@ -46,6 +46,14 @@
     width: 450px;
     background-color: $white;
     border-radius: 4px;
+    @media screen and (min-width: 320px){
+        position: absolute;  
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%) scale(1);
+        max-width: 450px;
+        height: 609px;
+    }
    
     @include for-size(mobile){
         position: absolute;  
