--- a/css/main.css
+++ b/css/main.css
@@ -1145,6 +1145,18 @@ section.title {
   border-radius: 4px;
 }
 
+@media screen and (min-width: 320px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+    max-width: 450px;
+    height: 609px;
+  }
+}
+
 @media (min-width: 480px) {
   .modal {
     position: absolute;
