--- a/css/main.css
+++ b/css/main.css
@@ -1130,6 +1130,11 @@ section.title {
   }
 }
 
+.backdrop.is-hidden .modal {
+  -webkit-transform: translate(-50%, -50%) scale(0.8);
+  transform: translate(-50%, -50%) scale(0.8);
+}
+
 @media (min-width: 768px) {
   .backdrop.is-hidden .modal {
     opacity: 0;
@@ -1140,7 +1145,6 @@ section.title {
 
 .modal {
   position: relative;
-  width: 450px;
   background-color: #ffffff;
   border-radius: 4px;
 }
@@ -1183,6 +1187,8 @@ section.title {
 
 @media (min-width: 1200px) {
   .modal {
+    top: 50%;
+    left: 50%;
     max-width: 528px;
     width: 100%;
     height: 581px;
@@ -1278,14 +1284,14 @@ section.title {
 
 @media screen and (min-width: 320px) {
   .form-input {
-    width: 370px;
+    width: 320px;
     height: 40px;
   }
 }
 
 @media (min-width: 480px) {
   .form-input {
-    width: 370px;
+    width: 320px;
     height: 40px;
   }
 }
@@ -1436,14 +1442,14 @@ section.title {
 
 @media screen and (min-width: 320px) {
   .textarea-form {
-    width: 370px;
+    width: 3    20px;
     height: 120px;
   }
 }
 
 @media (min-width: 480px) {
   .textarea-form {
-    width: 370px;
+    width: 320px;
     height: 120px;
   }
 }
