--- a/sass/components/_index_modal.scss
+++ b/sass/components/_index_modal.scss
@@ -21,7 +21,6 @@
         transition: opacity $time $cubic, visibility $time  $cubic
     }
 
-
 }
 .backdrop.is-hidden{
 
@@ -39,11 +38,13 @@
       opacity: 0;
       transform: translate(-50%, -50%) scale(0.2) rotate(180deg);
     }
+    -webkit-transform: translate(-50%, -50%) scale(0.8);
+  transform: translate(-50%, -50%) scale(0.8);
   }
 .modal{
 
     position: relative;
-    width: 450px;
+
     background-color: $white;
     border-radius: 4px;
     @media screen and (min-width: 320px){
@@ -73,6 +74,8 @@
         height: 609px;
     }
     @include for-size(desktop){
+        top: 50%;
+        left: 50%;
         max-width: 528px;
         width: 100%;
         height: 581px;
@@ -82,6 +85,7 @@
         width: 100%;      
 }
 }
+
 .btn-close {
     display: inline-block;
     position: absolute;
@@ -101,11 +105,11 @@
 
 }
 .modal-font{
-    @include for-size(tablet-only){
-        width: 370px;
-        height: 60px;
-         padding-bottom: 30px;
-    }
+@include for-size(tablet-only){
+    width: 370px;
+    height: 60px;
+    padding-bottom: 30px;
+}
     padding-top: 40px;
     font-style: normal;
     font-weight: bold;
@@ -129,9 +133,18 @@
     /* background-image: url(../img/modal-form/person-black.svg); */
 }
 
-
 .form-input{
-   
+    // position: relative;
+    // display: -webkit-box;
+    // display: -ms-flexbox;
+    // display: flex;
+    // -webkit-box-orient: vertical;
+    // -webkit-box-direction: normal;
+    // -ms-flex-direction: column;
+    // flex-direction: column;
+
+
+
     display: flex;
     align-items: center;
     /*margin: 0;
@@ -139,11 +152,11 @@
     margin-left: 41px;
     margin-top: 30px;
     @media screen and (min-width: 320px){
-        width: 370px;
+        width: 320px;
         height: 40px;      
     }
     @include for-size(mobile){
-        width: 370px;
+        width: 320px;
         height: 40px;
     }
     @include for-size(tablet){
@@ -155,7 +168,6 @@
         height: 40px;
     }
  
-
 
 
     /* left: 576px;
@@ -262,7 +274,6 @@
 }
 
 
-
 .btn-send{
     font-family: inherit;
     color: $white;
@@ -286,14 +297,13 @@
     }
 }
 
-
 .textarea-form{
     @media screen and (min-width: 320px){
-        width: 370px;
+        width: 3    20px;
         height: 120px;
     }
     @include for-size(mobile){
-        width: 370px;
+        width: 320px;
         height: 120px;
     }
     @include for-size(tablet){
@@ -304,7 +314,6 @@
         height: 120px;
         width: 448px;
     }
-
 
     resize: none;
     
@@ -327,4 +336,5 @@
     padding-left: 16px;
     padding-top: 12px;
 }
+
 
