--- a/css/main.css
+++ b/css/main.css
@@ -1149,15 +1149,15 @@ section.title {
   position: relative;
   background-color: #ffffff;
   border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
 }
 
 @media screen and (min-width: 320px) {
   .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%) scale(1);
-            transform: translate(-50%, -50%) scale(1);
     max-width: 450px;
     height: 609px;
   }
@@ -1165,11 +1165,6 @@ section.title {
 
 @media (min-width: 480px) {
   .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%) scale(1);
-            transform: translate(-50%, -50%) scale(1);
     max-width: 450px;
     height: 609px;
   }
@@ -1177,11 +1172,6 @@ section.title {
 
 @media (min-width: 768px) {
   .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%) scale(1);
-            transform: translate(-50%, -50%) scale(1);
     max-width: 450px;
     height: 609px;
   }
@@ -1189,10 +1179,7 @@ section.title {
 
 @media (min-width: 1200px) {
   .modal {
-    top: 50%;
-    left: 50%;
     max-width: 528px;
-    width: 100%;
     height: 581px;
   }
 }
@@ -1222,7 +1209,7 @@ section.title {
 }
 
 .modal-font {
-  padding-top: 40px;
+  padding-top: 20px;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
@@ -1231,10 +1218,18 @@ section.title {
   letter-spacing: 0.03em;
 }
 
-@media (max-width: 767px) {
+@media (min-width: 768px) {
   .modal-font {
-    width: 370px;
-    height: 60px;
+    padding-right: 40px;
+    padding-left: 40px;
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .modal-font {
+    padding-right: 40px;
+    padding-left: 40px;
     padding-bottom: 30px;
   }
 }
@@ -1350,19 +1345,36 @@ section.title {
   display: inline-block;
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
   padding: 0;
-  top: 20px;
+  top: 10px;
   text-align: center;
   color: #757575;
+}
+
+@media (min-width: 480px) {
+  .checkbox-label {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 768px) {
+  .checkbox-label {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .checkbox-label {
+    font-size: 14px;
+  }
 }
 
 .checkbox-icon {
   display: inline-block;
   vertical-align: middle;
-  margin-right: 5px;
+  margin-right: 0px;
   background-repeat: no-repeat;
   width: 16px;
   height: 15px;
@@ -1381,7 +1393,6 @@ section.title {
   margin-top: 20px;
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
   color: #2196F3;
@@ -1389,14 +1400,22 @@ section.title {
   margin: 0px;
 }
 
-.label-check {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 24px;
-  line-height: 1.714;
-  letter-spacing: 0.03em;
-  color: #757575;
+@media (min-width: 480px) {
+  .form-link {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 768px) {
+  .form-link {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .form-link {
+    font-size: 14px;
+  }
 }
 
 .btn-send {
@@ -1426,6 +1445,8 @@ section.title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-top: 0px;
+  margin-bottom: 0px;
   margin-left: 41px;
   margin-top: 30px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -1439,12 +1460,13 @@ section.title {
   letter-spacing: 0.01em;
   color: #000000;
   padding-left: 16px;
+  padding-right: 16px;
   padding-top: 12px;
 }
 
 @media screen and (min-width: 320px) {
   .textarea-form {
-    width: 3    20px;
+    width: 320px;
     height: 120px;
   }
 }
@@ -1465,8 +1487,8 @@ section.title {
 
 @media (min-width: 1200px) {
   .textarea-form {
-    height: 120px;
     width: 448px;
+    height: 120px;
   }
 }
 
