--- a/sass/components/_index_modal.scss
+++ b/sass/components/_index_modal.scss
@@ -2,19 +2,24 @@
 .backdrop {
     position: fixed;
     
-    
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.5);
-
+    padding: 15px 15px;
+    overflow-y: scroll;
     
+    // @include for-size(mobile){
+    //     padding: 15px 15px;
+    //     overflow-y: scroll;
+    // }
+    
+    // @include for-size(tablet){
+    //     padding: 15px 15px;
+    //     overflow-y: scroll;
+    // }
 
-    @include for-size(tablet-only){
-        padding: 15px;
-        overflow-y: scroll;
-    }
     @include for-size(tablet){
         opacity: 1;
         visibility: visible;
@@ -52,28 +57,28 @@
     left: 50%;
     transform: translate(-50%,-50%) scale(1);
     @media screen and (min-width: 320px){
-        max-width: 450px;
-        height: 609px;
+        width: 400px;
+        height: 640px;
     }
    
     @include for-size(mobile){
   
-        max-width: 450px;
-        height: 609px;
+        width: 450px;
+        height: 640px;
     }
 
     @include for-size(tablet){
-        max-width: 450px;
+        width: 450px;
         height: 609px;
     }
     @include for-size(desktop){
-        max-width: 528px;
+        width: 528px;
         height: 581px;
     }
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
-        max-width: 450px;
-        width: 100%;      
-}
+//     @media screen and (min-width: 768px) and (max-width: 1199px) {
+//         width: 450px;
+//         width: 100%;      
+// }
 }
 
 .btn-close {
@@ -96,17 +101,30 @@
 
 }
 .modal-font{
+    @include for-size(mobile){
+
+        padding-right: 40px;
+        padding-left: 40px;
+        // padding-bottom: 30px;
+    }
+
 @include for-size(tablet){
-    // width: 370px;
-    // height: 60px;
+
     padding-right: 40px;
     padding-left: 40px;
-    padding-bottom: 30px;
+    // padding-bottom: 30px;
+}
+@include for-size(desktop){
+    width: 100%;
+
+    // padding-right: 40px;
+    // padding-left: 40px;
+    // padding-bottom: 30px;
 }
 @media screen and (max-width: 1199px){
-    padding-right: 40px;
-    padding-left: 40px;
-    padding-bottom: 30px;
+    // padding-right: 40px;
+    // padding-left: 40px;
+    // padding-bottom: 30px;
 }
     padding-top: 20px;
     font-style: normal;
@@ -154,7 +172,7 @@
         height: 40px;      
     }
     @include for-size(mobile){
-        width: 320px;
+        width: 370px;
         height: 40px;
     }
     @include for-size(tablet){
@@ -224,6 +242,9 @@
     display: inline-block;
     font-style: normal;
     font-weight: normal;
+    @media screen and (min-width: 320px){
+        font-size: 12px;
+    }
     @include for-size(mobile){
     font-size: 12px;
     }
@@ -261,7 +282,9 @@
     margin-top:20px;
     font-style: normal;
     font-weight: normal;
-
+    @media screen and (min-width: 320px){
+        font-size: 12px;
+    }
     @include for-size(mobile){
     font-size: 12px;
     }
@@ -320,7 +343,7 @@
         height: 120px;     
     }
     @include for-size(mobile){
-        width: 320px;
+        width: 370px;
         height: 120px;
     }
     @include for-size(tablet){
