--- a/css/main.css
+++ b/css/main.css
@@ -1153,6 +1153,7 @@ section.title {
 
 @media screen and (min-width: 320px) {
   .modal {
+    top: 60%;
     width: 400px;
     height: 640px;
   }
@@ -1160,6 +1161,7 @@ section.title {
 
 @media (min-width: 480px) {
   .modal {
+    top: 60%;
     width: 450px;
     height: 640px;
   }
