--- a/sass/components/_index_modal.scss
+++ b/sass/components/_index_modal.scss
@@ -57,12 +57,13 @@
     left: 50%;
     transform: translate(-50%,-50%) scale(1);
     @media screen and (min-width: 320px){
+        top: 60%;
         width: 400px;
         height: 640px;
     }
    
     @include for-size(mobile){
-  
+        top: 60%;
         width: 450px;
         height: 640px;
     }
