--- a/css/main.css
+++ b/css/main.css
@@ -1987,10 +1987,17 @@ section.title {
 
 /* ******************************************************* */
 /* ***********************СТРАНИЦА ПОРТФОЛИО******************************** */
+@media screen and (min-width: 320px) {
+  .btn-container {
+    text-align: left;
+    padding-top: 50px;
+  }
+}
+
 @media (min-width: 480px) {
   .btn-container {
     text-align: left;
-    padding-top: 66px;
+    padding-top: 50px;
   }
 }
 
